Remove ruby version from rubocop workflow, uses the version in `.ruby_version` instead

--- a/.github/workflows/rubocop.yml
+++ b/.github/workflows/rubocop.yml
@@ -14,10 +14,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up Ruby 2.7.5
+      - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 2.7.5
           bundler-cache: true
 
       - name: Run Rubocop
